# PASTAQ

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE.md  MANIFEST.in  README.md  apt.txt  environment.yml  pastaqwheels_p36-312.sh  pyproject.toml  requirements.txt  setup.py
.binder/: postBuild  requirements.txt
.github/: cbuildwheel_testpypi.yml
.github/workflows/: PASTAQ Python Windows.yml  PASTAQ on multiple Python versions.yml  build_macos_upload_PyPi.yml  build_many_linux_pypi.yml  build_many_linux_tespypi.yml  build_windows_PyPi.yml  build_windows_upload_TestPyPi.yml  cbuildwheel_testpypi.yml  cmake-multi-platform.yml  main.yml  many_linux_pastaq.yml  wheels.yml  wheels_pypi.yml
centroid/: .gitmodules  CMakeLists.txt
centroid/src/: centroid.hpp
centroid/src/centroid/: centroid.cpp  centroid.hpp  centroid_command.cpp  centroid_files.cpp  centroid_files.hpp  centroid_runners.cpp  centroid_runners.hpp  centroid_serialize.cpp  centroid_serialize.hpp
centroid/tests/: centroid_files_test.cpp  centroid_test.cpp
examples/: ProfileCentroidPeakListComparison.ipynb  full_analysis.py  helpers.py  pastaqExamples.ipynb  pastaq_tutorial.ipynb  small_range.py  timsExample.ipynb
examples/cpp/: testquery.cpp  timsdataSamples.cpp  timstdf.cpp
ext/midas/: CMakeLists.txt
ext/midas/include/MIDAs/: MIDAs.h
ext/midas/src/: ElementalComposition.hpp  MIDAs.cpp
grid/: .gitlab-ci.yml  .gitmodules  CMakeLists.txt
grid/src/: grid_files.hpp
grid/src/grid/: base64.hpp  endian.hpp  grid.cpp  grid.hpp  grid_command.cpp  grid_files.cpp  grid_files.hpp  grid_runners.cpp  grid_runners.hpp  grid_serialize.cpp  grid_serialize.hpp  raw_data.cpp  raw_data.hpp  raw_data_serialize.cpp  raw_data_serialize.hpp  xml_reader.cpp  xml_reader.hpp
grid/tests/: grid_files_test.cpp  grid_runners_test.cpp  grid_test.cpp  xml_reader_test.cpp
metamatch/: CMakeLists.txt
metamatch/src/: metamatch_command.cpp
metamatch/src/metamatch/: metamatch.cpp  metamatch.hpp  metamatch_files.cpp  metamatch_files.hpp  metamatch_serialize.cpp  metamatch_serialize.hpp
metamatch/tests/: metamatch_test.cpp
old_structure/centroid/: CMakeLists.txt
old_structure/centroid/tests/: centroid_test.cpp
old_structure/grid/: CMakeLists.txt
old_structure/grid/tests/: xml_reader_test.cpp
old_structure/metamatch/: CMakeLists.txt
old_structure/python-bindings/: README.md
old_structure/python-bindings/scripts/: testing.py
old_structure/utils/: CMakeLists.txt
old_structure/utils/tests/: mock_stream_test.cpp
old_structure/warp2d/: CMakeLists.txt
old_structure/warp2d/src/: warp2d_command.cpp
python-bindings/: CMakeLists.txt  setup.py
python-bindings/src/tapp/: __init__.py  bindings.cpp
src/: base64.cpp  base64.hpp  centroid.cpp  centroid.hpp  endian.hpp  grid.cpp  grid.hpp  grid_command.cpp  grid_file.cpp  grid_file.hpp  grid_files.cpp  grid_files.hpp  grid_runners.cpp  grid_runners.hpp  main.cpp  tapp-datfile.cpp  tapp-datfile.hpp  tapp-grid.cpp  tapp-grid.hpp  tapp-mesh.cpp  tapp-mesh.hpp  tapp-weighted-mesh.cpp  tapp-weighted-mesh.hpp  xml_reader.cpp  xml_reader.hpp
src/lib/centroid/: centroid.cpp  centroid.hpp  centroid_command.cpp  centroid_runners.cpp  centroid_serialize.cpp  centroid_serialize.hpp
src/lib/feature_detection/: feature_detection.cpp  feature_detection.hpp  feature_detection_serialize.cpp  feature_detection_serialize.hpp
src/lib/grid/: grid.cpp  grid.hpp  grid_command.cpp  grid_serialize.cpp  grid_serialize.hpp  raw_data.hpp  raw_data_serialize.cpp  xml_reader.cpp  xml_reader.hpp
src/lib/include/: tims_visualization.h
src/lib/link/: link.cpp  link.hpp  link_msms.cpp  link_msms.hpp  link_msms_serialize.cpp  link_msms_serialize.hpp  link_serialize.cpp  link_serialize.hpp
src/lib/metamatch/: metamatch.cpp  metamatch.hpp  metamatch_serialize.cpp  metamatch_serialize.hpp
src/lib/protein_inference/: protein_inference.cpp  protein_inference.hpp  protein_inference_serialize.cpp  protein_inference_serialize.hpp
src/lib/raw_data/: raw_data.cpp  raw_data.hpp  raw_data_serialize.cpp  raw_data_serialize.hpp  timsdatacpp.cpp  timsdatacpp.h  xml_reader.cpp  xml_reader.hpp
src/lib/raw_data/include/: raw_data.hpp  raw_data_serialize.hpp  timsdatacpp.h  xml_reader.hpp
src/lib/utils/: base64.cpp  base64.hpp  compression.cpp  compression.hpp  interpolation.cpp  interpolation.hpp  search.hpp  serialization.cpp  serialization.hpp  test_utils.hpp
src/lib/visualization/: tims_visualization.cpp
src/lib/warp2d/: warp2d.cpp  warp2d.hpp  warp2d_runners.cpp  warp2d_serialize.cpp  warp2d_serialize.hpp
src/python-bindings/pastaq/: __init__.py  bindings.cpp  tdf.py  timsdata_pybind.cpp
src/python-bindings/pastaq/include/: timsdata_pybind.h
src/python-bindings/tapp/: __init__.py  bindings.cpp
tapp-python/: CMakeLists.txt  testing.py
tapp-python/examples/: pipeline.py
tapp-python/scripts/: testing.py
tapp-python/src/: example.cpp  tapp-python.cpp
tests/: centroid_files_test.cpp  centroid_test.cpp  feature_detection_test.cpp  grid_file_test.cpp  grid_files_test.cpp  grid_runners_test.cpp  grid_test.cpp  metamatch_test.cpp  mock_stream_test.cpp  serialization_test.cpp  tapp-datfile_test.cpp  tapp-grid_test.cpp  tapp-mesh_test.cpp  tapp-weighted-mesh_test.cpp  test_peak_cluster_attributes.py  test_peak_initialization.py  test_python313.py  test_utils.hpp  warp2d_test.cpp  xml_reader_test.cpp
tests/utils/: mock_stream.hpp  utils_test.cpp
tools/: generate_averagine.R  rugllm_provider-0.1.0-py3-none-any.whl
utils/: CMakeLists.txt
utils/src/utils/utils/: base64.cpp  base64.hpp  endian.hpp  search.cpp  search.hpp  serialization.cpp  serialization.hpp
utils/tests/: mock_stream.hpp  mock_stream_test.cpp  serialization_test.cpp  utils_test.cpp
warp2d/: CMakeLists.txt
warp2d/src/: warp2d_command.cpp
warp2d/src/warp2d/: warp2d.cpp  warp2d.hpp  warp2d_runners.cpp  warp2d_runners.hpp
warp2d/tests/: warp2d_runners_test.cpp  warp2d_test.cpp
